# NES_Emulator

./: .gitmodules  CMakeLists.txt
src/: cpu.h  mem.c  mem.h  nes_emu.c  opcodes.h
test/: basic_assert.c
